--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Musuem displaying Edo Artifacts">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>EMOWAA</title>
 </head>
 
 <body>
-    <header>Navigation and Logo</header>
-    <section>Hero Image and Caption</section>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#"></a>Collection</li>
+                <li><a href="#"></a>Bookings</li>
+            </ul>
+        </nav>
+
+        <a href="index.html"><h1>EMOWAA</h1></a>
+
+        <nav>
+            <ul>
+                <li><a href="#">Sign in</a></li>
+                <li><a href="#"></a>Sign Up</li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <div>
+
+        </div>
+    </section>
     <section>Information about the musuem</section>
     <section>Building Layout</section>
     <footer>Social media contact</footer>
