--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         </nav>
     </header>
     <section>
-        <div id="main-image"></div>
+        <figure>
+            <img src="assets/images/Benin-artefacts.jpg" alt="Bronze head depicting an Oba (King) of Benin">
+            <figcaption>Bronze head sculpture was recently returned by the University of Abderdeen to the 
+                Oba's palace in Benin-city, which is the original location from where it was taken by 
+                British soldiers in 1897. </figcaption>
+        </figure>
     </section>
     <section>Information about the musuem</section>
     <section>Building Layout</section>
