Resize main image

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     </header>
     <section>
         <figure>
-            <img src="assets/images/Benin-artefacts.jpg" alt="Bronze head depicting an Oba (King) of Benin">
-            <figcaption>Bronze head sculpture was recently returned by the University of Abderdeen to the 
+            <img src="assets/images/Benin-artefacts.jpg" alt="Bronze head depicting an Oba (King) of Benin" width="100%">
+            <figcaption id="caption-text">Bronze head sculpture was recently returned by the University of Abderdeen to the 
                 Oba's palace in Benin-city, which is the original location from where it was taken by 
                 British soldiers in 1897. </figcaption>
         </figure>
+
     </section>
     <section>Information about the musuem</section>
     <section>Building Layout</section>
