Add images to building layout section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,17 @@
 
     </div>
     </section>
-    <section>Building Layout</section>
+    <section>
+        <h2>Musuem Layout</h2>
+        <div>
+            <img src="assets/images/main-entrance.webp" alt="A picture illustration of Main entrace to the Museum"></img>
+            <img src="assets/images/7_Gates-and-Portals.jpg" alt="A picture illustration of gates and portals to different sections of the museum"></img>
+            <img src="assets/images/Royal-Spire-Pavilion.webp" alt="A picture illustration of the recreated Royal pavilion of the ancient Benin kingdom"></img>
+            <img src="assets/images/5_Education-Spaces.webp" alt="A picture illustration of an educational center in the museum"></img>
+            <img src="assets/images/2_Ceramic-Gallery.webp" alt="A picture illustration of the ceramic gallery"></img>
+            <img src="assets/images/Contemporary-Gallery.webp" alt="A picture illustration of the contemporary art gallery"></img>
+        </div>
+    </section>
     <footer>Social media contact</footer>
 
 </body>
