Add main structure for footer

--- a/index.html
+++ b/index.html
@@ -152,7 +152,22 @@
 
 
     </section>
-    <footer>Social media contact</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Vist our Facebook page (Opens in new tab)">Facebook</a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Vist our Instagram page (Opens in new tab)">Instgram</a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Vist our Twitter page (Opens in new tab)">Twitter</a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Vist our Youtube page (Opens in new tab)">Youtube</a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 
