Change stylesof header from float toflex and pposition

--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 
 <body>
     <header>
-        <nav>
-            <ul id="menu-left">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Collection</a></li>
-                <li><a href="#">Bookings</a></li>
+        <nav class="flex-nav-links">
+            <ul class="nav-left">
+                <li class="nav-list-items"><a href="index.html">Home</a></li>
+                <li class="nav-list-items"><a href="#">Collection</a></li>
+                <li class="nav-list-items"><a href="#">Bookings</a></li>
             </ul>
-        </nav>
 
-        <a href="index.html">
-            <h1 id="logo">EMOWAA</h1>
-        </a>
-
-
+            <div class="nav-logo"> 
+                <a href="index.html">
+                    <h1 id="logo">EMOWAA</h1>
+                </a>
+            </div>
+        </nav> 
     </header>
+
     <section>
         <figure>
             <img src="assets/images/Benin-artefacts.jpg" alt="Bronze head depicting an Oba (King) of Benin"
