Add font awesome it code to html file

--- a/index.html
+++ b/index.html
@@ -80,78 +80,7 @@
     </section>
     <section id="layout-background">
         <h2 style="text-align: center;">Musuem Layout</h2>
-        <!-- <div class="flex-container-layout">
-            <div class="flex-layout-images flex-layout-image-1">
-                <figure>
-                    <figcaption>
-                        Main Entrance to Musuem
-                    </figcaption>
-                    <img src="assets/images/main-entrance.webp"
-                        alt="A picture illustration of Main entrace to the Museum" width="100%">
-                </figure>
-                <figure>
-            </div>
-
-<div class="flex-layout-images flex-layout-image-2">
-                <figure>
-                    <figcaption>
-                        Gates and Portals
-                    </figcaption>
-                    <img src="assets/images/7_Gates-and-Portals.jpg"
-                        alt="A picture illustration of gates and portals to different sections of the museum" width="100%">
-                </figure>
-                <figure>
-            </div>
-
-
-<div class="flex-layout-images flex-layout-image-3">
-                <figure>
-                    <figcaption>
-                        Recreated Royal Pavilion
-                    </figcaption>
-                    <img src="assets/images/Royal-Spire-Pavilion.webp"
-                        alt="A picture illustration of gates and portals to different sections of the museum" width="100%">
-                </figure>
-                <figure>
-            </div>
-
-
-<div class="flex-layout-images flex-layout-image-4">
-                <figure>
-                    <figcaption>
-                        Learning spaces
-                    </figcaption>
-                    <img src="assets/images/5_Education-Spaces.webp"
-                        alt="A picture illustration of an educational center in the museum" width="100%">
-                </figure>
-                <figure>
-            </div>
-
-
-<div class="flex-layout-images flex-layout-image-5">
-                <figure>
-                    <figcaption>
-                        Ceramic Gallery
-                    </figcaption>
-                    <img src="assets/images/2_Ceramic-Gallery.webp"
-                        alt="A picture illustration of the ceramic gallery" width="100%">
-                </figure>
-                <figure>
-            </div>
-
-<div class="flex-layout-images flex-layout-image-6">
-                <figure>
-                    <figcaption>
-                        Contemporary Gallery
-                    </figcaption>
-                    <img src="assets/images/Contemporary-Gallery.webp"
-                        alt="A picture illustration of the contemporary art gallery" width="100%">
-                </figure>
-                <figure>
-            </div>
-</div> -->
-
-
+        
 <div class="museum-layout-container">
           
     <figure>
@@ -206,17 +135,15 @@
     </figure>
    
 </div>
-
-
-
     </section>
+
     <footer>
         <ul>
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Vist our Facebook page (Opens in new tab)">Facebook</a>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Vist our Facebook page (Opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Vist our Instagram page (Opens in new tab)">Instgram</a>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Vist our Instagram page (Opens in new tab)">Instagram</a>
             </li>
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Vist our Twitter page (Opens in new tab)">Twitter</a>
@@ -227,6 +154,7 @@
         </ul>
     </footer>
 
+    <script src="https://kit.fontawesome.com/b4f8809498.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
