Add style to footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="nav-logo"> 
                 <a href="index.html">
-                    <h1 id="logo">EMOWAA</h1>
+                    <h1>EMOWAA</h1>
                 </a>
             </div>
         </nav> 
@@ -138,18 +138,18 @@
     </section>
 
     <footer>
-        <ul>
+        <ul class="social-media">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Vist our Facebook page (Opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Vist our Facebook page (Opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Vist our Instagram page (Opens in new tab)">Instagram</a>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Vist our Instagram page (Opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Vist our Twitter page (Opens in new tab)">Twitter</a>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Vist our Twitter page (Opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Vist our Youtube page (Opens in new tab)">Youtube</a>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Vist our Youtube page (Opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
