Create collection html page for gallery

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="flex-nav-links">
             <ul class="nav-left">
                 <li class="nav-list-items"><a href="index.html">Home</a></li>
-                <li class="nav-list-items"><a href="#">Collection</a></li>
+                <li class="nav-list-items"><a href="collection.html">Collection</a></li>
                 <li class="nav-list-items"><a href="#">Bookings</a></li>
             </ul>
 
