Add header to collection page and add html structure for images

--- a/collection.html
+++ b/collection.html
@@ -28,6 +28,37 @@
         </nav> 
     </header>
 
+    <div class="collection-header">
+        <h1>Museum Collection</h1>
+        <p>Gallery of some artifacts that can be viewed at the museum</p>
+      </div>
+
+      <div class="collection-row">
+        <div class="collection-column">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div class="collection-row">
+            <div class="collection-column">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+
+            <div class="collection-row">
+                <div class="collection-column">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+
+      </div>
+
 
     <footer>
         <ul class="social-media">
