Create bookings page and add basic html structure

--- a/bookings.html
+++ b/bookings.html
@@ -28,34 +28,18 @@
         </nav> 
     </header>
 
-    <div class="collection-header">
-        <h1>Museum Collection</h1>
-        <p>Gallery of some artifacts that can be viewed at the museum</p>
-      </div>
+    <div class="booking-container">
+        <div class="time-container">
 
-      <div class="collection-row">
-        <div class="collection-column">
-            <img src="assets/images/ancestral_shrine.jpg" alt="Ancestral shrine in Oba's Palace">
-            <img src="assets/images/benin-palace-plaque.jpg" alt="A depiction of guards at the Oba of Benin's palace">
-            <img src="assets/images/benin_brass-1.jpg" alt="Bronze plaque of an Oba of Benin">
-            <img src="assets/images/benin_bronzes-2.jpg" alt="Copper alloy cast of an important figure in Benin kingdom">
         </div>
 
-            <div class="collection-column">
-                <img src="assets/images/benin_portugese.JPG" alt="Bronze depiction of a portugese soldier">
-                <img src="assets/images/drum_beating.jpg" alt="Bronze plaque of a dignitary with a drum with two attendants by his side">
-                <img src="assets/images/leopard_head.jpg" alt="Bronze ornament depicting a leopard's head">
-                <img src="assets/images/oba_attendants.jpg" alt="An Oba, with two kneeling attendants, and 2 Portuguese figures">
-            </div>
+        <div class="form-container">
 
-                <div class="collection-column">
-                    <img src="assets/images/two_officials.jpg" alt="A bronze depiction of two officials of the Benin Kingdom">
-                    <img src="assets/images/warrior_bronze.JPG" alt="Depiction of a single warrior">
-                    <img src="assets/images/warriors3.JPG" alt="A depiction of three warriors">
-                    <img src="assets/images/benin-officials-2.jpg" alt="A bronze depiction of two officials of the Benin Kingdom with raised swords">
-                </div>
+        </div>
+      
+    </div>
 
-      </div>
+    
 
 
     <footer>
