--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="nav-left">
                 <li class="nav-list-items"><a href="index.html">Home</a></li>
                 <li class="nav-list-items"><a href="collection.html">Collection</a></li>
-                <li class="nav-list-items"><a href="#">Bookings</a></li>
+                <li class="nav-list-items"><a href="bookings.html">Bookings</a></li>
             </ul>
 
             <div class="nav-logo"> 
